version/0.18/_sources/api/solver/_autosummary/settings/inert_particle.rst.txt
:orphan:

.. _inert_particle:

inert_particle
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.inert_particle.inert_particle
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`inert_particle_child <inert_particle_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

